modify gitignore and launch.json

--- a/.gitignore
+++ b/.gitignore
@@ -445,5 +445,6 @@ Servers/RetailGateway/Src/**/*.[Xx][Mm][Ll]
 
 # PosTyper output files
 /POStyper.exe
+/POStyper.lnk
 collected_logs/
 captured_images/
