--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -1,50 +1,50 @@
 [CONFIG]
-DIALOG_CAPTION=PosTyper [14.0.1700Debug]
-DIALOG_X=-1
-DIALOG_Y=-1
-CMD_PATH=c:\
-RETAIL_DB_NAME=v14_0_17_Retail
-SERVER_WEBSITE=http://localhost/v14.0.1700_Server
-RABBITMQ_WEBSITE=http://localhost:15672/#/queues
-SERVER_PATH=C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
-POS_PATH=C:\Dev\v14_0_1700\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH=C:\Office-Client-Release\Jumbo_Trunk\Web
-TLOG_PATH=C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
-DMS_PATH=C:\Retalix\StoreServices\Server\DMSClient
-SPOOKY_PATH=C:\Retalix\StoreServices\Server\PosService\Utils
-ARSGATEWAY_PATH=C:\Retalix\ArsGateway
-RETAILGATEWAY_PATH=C:\Retalix\RetailGateway\NCR.RetailGateway.ws
-STOREGATEWAY_PATH=C:\Retalix\StoreGateway
-WINEPTS_PATH=C:\WinEpts
-SERVER_DBG_CUST_PATH=C:\Dev\v14_0_1700\Cust\Servers\Store
-SERVER_DBG_EXT_PATH=C:\Dev\v14_0_1700\Ext\StoreServer
-POS_DBG_CUST_PATH=C:\Dev\v14_0_1700\Cust\Clients\POS
-POS_DBG_EXT_PATH=C:\Dev\v14_0_1700\Ext\POSClient
-OFFICE_DBG_CUST_PATH=C:\Dev\v14_0_1700\Cust\Office
-OFFICE_DBG_EXT_PATH=C:\Dev\v14_0_1700\Ext\Office
-SQLMGR="C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
-EDITOR="C:\Program Files\Notepad++\notepad++.exe"
-BROWSER="C:\Program Files\Google\Chrome\Application\chrome.exe"
-SNOOP="C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
-USER=1
-PASSWORD=1
-LOYCARD=2600000078870
-SCANNER_EMU=Scanner\Emulator
-SCANNER_EMU_X=560
-SCANNER_EMU_Y=770
-PRINTER_EMU=POSPrinter\Emulator - Receipt
-PRINTER_EMU_X=0
-PRINTER_EMU_Y=770
-SCALE_EMU=Scale\Emulator
-SCALE_EMU_X=965
-SCALE_EMU_Y=770
-DRAWER_EMU=Cash Drawer, PSI OPOS Simulator
-DRAWER_EMU_X=0
-DRAWER_EMU_Y=0
-WINEPTS_EMU=EFT Simulator
-WINEPTS_EMU_X=1025
-WINEPTS_EMU_Y=0
-UPB_EMU=UPB Simulator
-UPB_EMU_X=0
-UPB_EMU_Y=0
+DIALOG_CAPTION			= PosTyper [14.0.1700Debug]
+DIALOG_X				= -1
+DIALOG_Y				= -1
+CMD_PATH				= c:\
+RETAIL_DB_NAME			= v14_0_17_Retail
+SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
+RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
+SERVER_PATH				= C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
+POS_PATH				= C:\Dev\v14_0_1700\Cust\Clients\POS\Output\Debug\Product
+OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
+TLOG_PATH				= C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
+DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
+SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
+ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
+RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
+STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
+WINEPTS_PATH			= C:\WinEpts
+SERVER_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Servers\Store
+SERVER_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\StoreServer
+POS_DBG_CUST_PATH		= C:\Dev\v14_0_1700\Cust\Clients\POS
+POS_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\POSClient
+OFFICE_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Office
+OFFICE_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\Office
+SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
+EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
+BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
+SNOOP					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
+USER					= 1
+PASSWORD				= 1
+LOYCARD					= 2600000078870
+SCANNER_EMU				= Scanner\Emulator
+SCANNER_EMU_X			= 560
+SCANNER_EMU_Y			= 770
+PRINTER_EMU				= POSPrinter\Emulator - Receipt
+PRINTER_EMU_X			= 0
+PRINTER_EMU_Y			= 770
+SCALE_EMU				= Scale\Emulator
+SCALE_EMU_X				= 965
+SCALE_EMU_Y				= 770
+DRAWER_EMU				= Cash Drawer, PSI OPOS Simulator
+DRAWER_EMU_X			= 0
+DRAWER_EMU_Y			= 0
+WINEPTS_EMU				= EFT Simulator
+WINEPTS_EMU_X			= 1025
+WINEPTS_EMU_Y			= 0
+UPB_EMU					= UPB Simulator
+UPB_EMU_X				= 0
+UPB_EMU_Y				= 0
 
