--- a/POStyper.ini
+++ b/POStyper.ini
@@ -2,6 +2,7 @@
 DIALOG_CAPTION			= PosTyper [JumboTrunkDebug]
 DIALOG_X				= -1
 DIALOG_Y				= -1
+DIALOG_STATUS_BAR		= True
 CMD_PATH				= c:\
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
