--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -2,6 +2,7 @@
 DIALOG_CAPTION			= PosTyper [14.0.1700Debug]
 DIALOG_X				= -1
 DIALOG_Y				= -1
+DIALOG_STATUS_BAR		= False
 CMD_PATH				= c:\
 RETAIL_DB_NAME			= v14_0_17_Retail
 SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
