--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -2,6 +2,7 @@
 DIALOG_CAPTION			= PosTyper [MsiRelease]
 DIALOG_X				= -1
 DIALOG_Y				= -1
+DIALOG_STATUS_BAR		= False
 CMD_PATH				= c:\
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
