--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -3,6 +3,7 @@ DIALOG_CAPTION			= PosTyper [JumboTrunkDebug]
 DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
+DIALOG_EXT_DEVELOPER	= True
 CMD_PATH				= c:\
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
