--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -3,6 +3,7 @@ DIALOG_CAPTION			= PosTyper
 DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
+DIALOG_EXT_DEVELOPER	= False
 CMD_PATH				= c:\
 RETAIL_DB_NAME			= Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
