--- a/POStyper.ini
+++ b/POStyper.ini
@@ -1,17 +1,16 @@
 [CONFIG]
-DIALOG_CAPTION			= PosTyper [JumboTrunkDebug]
+DIALOG_CAPTION			= PosTyper
 DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
 DIALOG_EXT_DEVELOPER	= False
-CMD_PATH				= c:\
-RETAIL_DB_NAME			= JumboTrunk_Retail
-SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
+RETAIL_DB_NAME			= Retail
+SERVER_WEBSITE			= http://localhost/StoreWebServices/
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
-SERVER_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
-POS_PATH				= C:\Dev\JumboTrunk\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
-TLOG_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
+SERVER_PATH				= C:\Retalix\StoreServices\Server\PosService
+POS_PATH				= C:\Retalix\StoreServices\PosClient
+OFFICE_PATH				= C:\Retalix\StoreServices\OfficeClient\Web
+TLOG_PATH				= C:\Retalix\StoreServices\Server\PosService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
 ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
@@ -24,12 +23,13 @@ POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
-SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
-EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
+CMD						= c:\
+SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
+EDITOR					= "C:\Program Files (x86)\Notepad++\notepad++.exe"
 BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
-SNOOP 					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
-USER 					= 1
-PASSWORD 				= 1
+SNOOP					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
+USER					= 1
+PASSWORD				= 1
 LOYCARD					= 2600000078870
 SCANNER_EMU				= Scanner\Emulator
 SCANNER_EMU_X			= 560
