--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -4,7 +4,6 @@ DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
 DIALOG_EXT_DEVELOPER	= False
-CMD_PATH				= c:\
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
@@ -24,6 +23,7 @@ POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
+CMD						= c:\
 SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
 EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
 BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
