change office path

--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -12,7 +12,7 @@ RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 
 SERVER_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
 POS_PATH				= C:\Dev\JumboTrunk\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
+OFFICE_PATH				= C:\Dev\JumboTrunk\Cust\Office\Src\Web
 TLOG_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
