--- a/POStyper.ini
+++ b/POStyper.ini
@@ -28,7 +28,7 @@ POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
 
-CMD						= c:\
+CMD						= "C:\Windows\System32\cmd.exe"
 SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
 EDITOR					= "C:\Program Files (x86)\Notepad++\notepad++.exe"
 BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
