--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -28,7 +28,7 @@ POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
 
-CMD						= c:\
+CMD						= "C:\Windows\System32\cmd.exe"
 SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
 EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
 BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
