Add DIALOG_LANG_SWITCHER to ini

--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -5,6 +5,7 @@ DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
 DIALOG_EXT_DEVELOPER	= False
+DIALOG_LANG_SWITCHER	= False
 
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
