--- a/POStyper.ini
+++ b/POStyper.ini
@@ -1,20 +1,20 @@
 [CONFIG]
 
-DIALOG_CAPTION			= PosTyper [JumboTrunkDebug]
+DIALOG_CAPTION			= PosTyper
 DIALOG_X				= -1
 DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
-DIALOG_EXT_DEVELOPER	= True
-DIALOG_LANG_SWITCHER	= True
+DIALOG_EXT_DEVELOPER	= False
+DIALOG_LANG_SWITCHER	= False
 
-RETAIL_DB_NAME			= JumboTrunk_Retail
-SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
+RETAIL_DB_NAME			= Retail
+SERVER_WEBSITE			= http://localhost/StoreWebServices/
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 
-SERVER_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
-POS_PATH				= C:\Dev\JumboTrunk\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Dev\JumboTrunk\Cust\Office\Src\Web
-TLOG_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
+SERVER_PATH				= C:\Retalix\StoreServices\Server\PosService
+POS_PATH				= C:\Retalix\StoreServices\PosClient
+OFFICE_PATH				= C:\Retalix\StoreServices\OfficeClient\Web
+TLOG_PATH				= C:\Retalix\StoreServices\Server\PosService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
 ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
@@ -30,13 +30,13 @@ OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
 
 CMD						= "C:\Windows\System32\cmd.exe"
-SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
-EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
+SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
+EDITOR					= "C:\Program Files (x86)\Notepad++\notepad++.exe"
 BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
-SNOOP 					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
+SNOOP					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
 
-USER 					= 1
-PASSWORD 				= 1
+USER					= 1
+PASSWORD				= 1
 LOYCARD					= 2600000078870
 
 SCANNER_EMU				= Scanner\Emulator
