--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -48,9 +48,9 @@ PRINTER_EMU_Y			= 770
 SCALE_EMU				= Scale\Emulator
 SCALE_EMU_X				= 965
 SCALE_EMU_Y				= 770
-DRAWER_EMU				= Cash Drawer, PSI OPOS Simulator
-DRAWER_EMU_X			= 0
-DRAWER_EMU_Y			= 0
+DRAWER_EMU				= CashDrawer\Emulator
+DRAWER_EMU_X			= 1025
+DRAWER_EMU_Y			= 685
 WINEPTS_EMU				= EFT Simulator
 WINEPTS_EMU_X			= 1025
 WINEPTS_EMU_Y			= 0
