rename scenario and tendering tokens

--- a/scenarios/CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
+++ b/scenarios/CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
@@ -1,18 +1,20 @@
 [items]
-item=736211013712
-wait=700
-button=8
-button=.
-button=7
-button=1
-wait=700
-button=ENTER
-wait=700
-button=ENTER
-wait=700
-button=ADDCUSTOMERTOSKIP
-wait=1000
-button=DYNA1
+item	= 736211013712
+wait	= 700
+button	= 8
+button	= .
+button	= 7
+button	= 1
+wait	= 700
+button	= ENTER
+wait	= 700
+button	= ENTER
+wait	= 700
+button	= ADD_CUSTOMER_BACK_BTN
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 1000
+button	= TENDER_1
 
 
 
