--- a/scenarios/sell_3x_369_cash.ini
+++ b/scenarios/sell_3x_369_cash.ini
@@ -1,15 +1,15 @@
 [items]
-button=3
-button=QTY
-wait=700
-item=369
-button=ENTER
-wait=700
-button=ADDCUSTOMERTOSKIP
-wait=700
-button=DIALOGZIPTOSKIP
-wait=700
-button=DYNA2
+button	= 3
+button	= QTY
+wait	= 700
+item	= 369
+button	= ENTER
+wait	= 700
+button	= ADD_CUSTOMER_BACK_BTN
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 700
+button	= TENDER_2
 
 
 
