--- a/scenarios/sell_loy_369_cash.ini
+++ b/scenarios/sell_loy_369_cash.ini
@@ -1,13 +1,13 @@
 [items]
-item=2600000078870
-button=ENTER
-wait=700
-item=369
-button=ENTER
-wait=700
-button=DIALOGZIPTOSKIP
-wait=700
-button=DYNA2
+item	= 2600000078870
+button	= ENTER
+wait	= 700
+item	= 369
+button	= ENTER
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 700
+button	= TENDER_2
 
 
 
