--- a/scenarios/CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
+++ b/scenarios/CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
@@ -1,18 +1,20 @@
 [items]
-item=736211013712
-wait=700
-button=8
-button=.
-button=7
-button=1
-wait=700
-button=ENTER
-wait=700
-button=ENTER
-wait=700
-item=2600000078870
-wait=1000
-button=DYNA1
+item	= 736211013712
+wait	= 700
+button	= 8
+button	= .
+button	= 7
+button	= 1
+wait	= 700
+button	= ENTER
+wait	= 700
+button	= ENTER
+wait	= 700
+item	= 2600000078870
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 1000
+button	= TENDER_1
 
 
 
