--- a/scenarios/sell_loy_369_eft.ini
+++ b/scenarios/sell_loy_369_eft.ini
@@ -1,13 +1,14 @@
 [items]
-item=2600000078870
-button=ENTER
-wait=700
-item=369
-button=ENTER
-wait=700
-button=DIALOGZIPTOSKIP
-wait=700
-button=DYNA1
+item	= 2600000078870
+button	= ENTER
+wait	= 700
+item	= 369
+wait	= 700
+button	= ENTER
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 700
+button	= TENDER_1
 
 
 
