--- a/tendering/tendering.ini
+++ b/tendering/tendering.ini
@@ -1,11 +1,11 @@
 [items]
-button=ENTER
-wait=1000
-button=ADDCUSTOMERTOSKIP
-wait=500
-button=DIALOGZIPTOSKIP
-wait=500
-button=DYNA2
+button	= ENTER
+wait	= 700
+button	= ADD_CUSTOMER_BACK_BTN
+wait	= 700
+button	= DIALOG_ZIP_TO_SKIP_BTN
+wait	= 700
+button	= TENDER_2
 
 
 
