--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -37,7 +37,7 @@ SNOOP 					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
 
 USER 					= 1
 PASSWORD 				= 1
-LOYCARD					= 2600000078870
+LOYALTY_CARD			= 2600000078870
 
 SCANNER_EMU				= Scanner\Emulator
 SCANNER_EMU_X			= 560
