--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -39,22 +39,22 @@ USER					= 1
 PASSWORD				= 1
 LOYALTY_CARD			= 2600000078870
 
-SCANNER_EMU				= Scanner\Emulator
+SCANNER_EMU_CAPTION		= Scanner\Emulator
 SCANNER_EMU_X			= 560
 SCANNER_EMU_Y			= 770
-PRINTER_EMU				= POSPrinter\Emulator - Receipt
+PRINTER_EMU_CAPTION		= POSPrinter\Emulator - Receipt
 PRINTER_EMU_X			= 0
 PRINTER_EMU_Y			= 770
-SCALE_EMU				= Scale\Emulator
+SCALE_EMU_CAPTION		= Scale\Emulator
 SCALE_EMU_X				= 965
 SCALE_EMU_Y				= 770
-DRAWER_EMU				= CashDrawer\Emulator
+DRAWER_EMU_CAPTION		= CashDrawer\Emulator
 DRAWER_EMU_X			= 1025
 DRAWER_EMU_Y			= 685
-WINEPTS_EMU				= EFT Simulator
+WINEPTS_EMU_CAPTION		= EFT Simulator
 WINEPTS_EMU_X			= 1025
 WINEPTS_EMU_Y			= 0
-UPB_EMU					= UPB Simulator
+UPB_EMU_CAPTION			= UPB Simulator
 UPB_EMU_X				= 0
 UPB_EMU_Y				= 0
 
