--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -6,6 +6,7 @@ DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
 DIALOG_EXT_DEVELOPER	= False
 DIALOG_LANG_SWITCHER	= False
+DIALOG_SCENARIO_SUBPATH	= .
 
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
