--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -6,6 +6,7 @@ DIALOG_Y				= -1
 DIALOG_STATUS_BAR		= False
 DIALOG_EXT_DEVELOPER	= True
 DIALOG_LANG_SWITCHER	= True
+DIALOG_SCENARIO_SUBPATH	= .
 
 RETAIL_DB_NAME			= v23_1_Retail
 SERVER_WEBSITE			= http://localhost/v23.1_Server
