add "card" key and "TO_TENDER" value to extend readability

--- a/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
+++ b/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
@@ -8,9 +8,9 @@ button	= 1
 wait	= 700
 button	= ENTER
 wait	= 700
-button	= ENTER
+button	= TO_TENDER
 wait	= 700
-item	= 2600000078870
+card	= 2600000078870
 wait	= 700
 button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 1000
