--- a/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
+++ b/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
@@ -8,7 +8,7 @@ button	= 1
 wait	= 700
 button	= ENTER
 wait	= 700
-button	= ENTER
+button	= TO_TENDER
 wait	= 700
 button	= ADD_CUSTOMER_BACK_BTN
 wait	= 700
