--- a/scenarios/sell_3x_369_cash.ini
+++ b/scenarios/sell_3x_369_cash.ini
@@ -3,7 +3,7 @@ button	= 3
 button	= QTY
 wait	= 700
 item	= 369
-button	= ENTER
+button	= TO_TENDER
 wait	= 700
 button	= ADD_CUSTOMER_BACK_BTN
 wait	= 700
