--- a/scenarios/sell_loy_369_cash.ini
+++ b/scenarios/sell_loy_369_cash.ini
@@ -1,12 +1,13 @@
 [items]
-item	= 2600000078870
+card	= 2600000078870
 button	= ENTER
 wait	= 700
 item	= 369
-button	= ENTER
+wait	= 700
+button	= TO_TENDER
 wait	= 700
 button	= DIALOG_ZIP_TO_SKIP_BTN
-wait	= 700
+wait	= 1000
 button	= TENDER_2
 
 
