--- a/scenarios/sell_loy_369_eft.ini
+++ b/scenarios/sell_loy_369_eft.ini
@@ -1,10 +1,10 @@
 [items]
-item	= 2600000078870
+card	= 2600000078870
 button	= ENTER
 wait	= 700
 item	= 369
 wait	= 700
-button	= ENTER
+button	= TO_TENDER
 wait	= 700
 button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 700
