--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -1,61 +1,62 @@
 [CONFIG]
 
-DIALOG_CAPTION			= PosTyper
-DIALOG_X				= -1
-DIALOG_Y				= -1
-DIALOG_STATUS_BAR		= False
-DIALOG_EXT_DEVELOPER	= False
-DIALOG_LANG_SWITCHER	= False
-DIALOG_SCENARIO_SUBPATH	= .
-
-RETAIL_DB_NAME			= Retail
-SERVER_WEBSITE			= http://localhost/StoreWebServices/
-RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
-
-SERVER_PATH				= C:\Retalix\StoreServices\Server\PosService
-POS_PATH				= C:\Retalix\StoreServices\PosClient
-OFFICE_PATH				= C:\Retalix\StoreServices\OfficeClient\Web
-TLOG_PATH				= C:\Retalix\StoreServices\Server\PosService\Log
-DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
-SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
-ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
-RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
-STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
-WINEPTS_PATH			= C:\WinEpts
-
-SERVER_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Servers\Store
-SERVER_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\StoreServer
-POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
-POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
-OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
-OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
-
-CMD						= "C:\Windows\System32\cmd.exe"
-SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
-EDITOR					= "C:\Program Files (x86)\Notepad++\notepad++.exe"
-BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
-SNOOP					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
-
-USER					= 1
-PASSWORD				= 1
-LOYALTY_CARD			= 2600000078870
-
-SCANNER_EMU_CAPTION		= Scanner\Emulator
-SCANNER_EMU_X			= 560
-SCANNER_EMU_Y			= 770
-PRINTER_EMU_CAPTION		= POSPrinter\Emulator - Receipt
-PRINTER_EMU_X			= 0
-PRINTER_EMU_Y			= 770
-SCALE_EMU_CAPTION		= Scale\Emulator
-SCALE_EMU_X				= 965
-SCALE_EMU_Y				= 770
-DRAWER_EMU_CAPTION		= CashDrawer\Emulator
-DRAWER_EMU_X			= 1025
-DRAWER_EMU_Y			= 685
-WINEPTS_EMU_CAPTION		= EFT Simulator
-WINEPTS_EMU_X			= 1025
-WINEPTS_EMU_Y			= 0
-UPB_EMU_CAPTION			= UPB Simulator
-UPB_EMU_X				= 0
-UPB_EMU_Y				= 0
+DIALOG_CAPTION				= PosTyper
+DIALOG_X					= -1
+DIALOG_Y					= -1
+DIALOG_STATUS_BAR			= False
+DIALOG_EXT_DEVELOPER		= False
+DIALOG_LANG_SWITCHER		= False
+DIALOG_SCENARIO_SUBPATH		= .
+DIALOG_AUTO_SPEED_FACTOR	= 2
+	
+RETAIL_DB_NAME				= Retail
+SERVER_WEBSITE				= http://localhost/StoreWebServices/
+RABBITMQ_WEBSITE			= http://localhost:15672/#/queues
+	
+SERVER_PATH					= C:\Retalix\StoreServices\Server\PosService
+POS_PATH					= C:\Retalix\StoreServices\PosClient
+OFFICE_PATH					= C:\Retalix\StoreServices\OfficeClient\Web
+TLOG_PATH					= C:\Retalix\StoreServices\Server\PosService\Log
+DMS_PATH					= C:\Retalix\StoreServices\Server\DMSClient
+SPOOKY_PATH					= C:\Retalix\StoreServices\Server\PosService\Utils
+ARSGATEWAY_PATH				= C:\Retalix\ArsGateway
+RETAILGATEWAY_PATH			= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
+STOREGATEWAY_PATH			= C:\Retalix\StoreGateway
+WINEPTS_PATH				= C:\WinEpts
+	
+SERVER_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Servers\Store
+SERVER_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\StoreServer
+POS_DBG_CUST_PATH			= C:\Dev\JumboTrunk\Cust\Clients\POS
+POS_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\POSClient
+OFFICE_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Office
+OFFICE_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\Office
+	
+CMD							= "C:\Windows\System32\cmd.exe"
+SQLMGR						= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
+EDITOR						= "C:\Program Files (x86)\Notepad++\notepad++.exe"
+BROWSER						= "C:\Program Files\Google\Chrome\Application\chrome.exe"
+SNOOP						= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
+	
+USER						= 1
+PASSWORD					= 1
+LOYALTY_CARD				= 2600000078870
+	
+SCANNER_EMU_CAPTION			= Scanner\Emulator
+SCANNER_EMU_X				= 560
+SCANNER_EMU_Y				= 770
+PRINTER_EMU_CAPTION			= POSPrinter\Emulator - Receipt
+PRINTER_EMU_X				= 0
+PRINTER_EMU_Y				= 770
+SCALE_EMU_CAPTION			= Scale\Emulator
+SCALE_EMU_X					= 965
+SCALE_EMU_Y					= 770
+DRAWER_EMU_CAPTION			= CashDrawer\Emulator
+DRAWER_EMU_X				= 1025
+DRAWER_EMU_Y				= 685
+WINEPTS_EMU_CAPTION			= EFT Simulator
+WINEPTS_EMU_X				= 1025
+WINEPTS_EMU_Y				= 0
+UPB_EMU_CAPTION				= UPB Simulator
+UPB_EMU_X					= 0
+UPB_EMU_Y					= 0
 
