add some more CLL scanarios

--- a/scenarios/02. CLL/06_stamps_sell_321_twice.ini
+++ b/scenarios/02. CLL/06_stamps_sell_321_twice.ini
@@ -1,10 +1,15 @@
 [items]
+button	= 2
+wait	= 100
+button	= QTY
+wait	= 100
+item	= 321
+wait	= 100
 item	= 736211013712
 wait	= 300
-button	= 8
 button	= .
-button	= 7
-button	= 1
+button	= 3
+button	= 3
 wait	= 300
 button	= ENTER
 wait	= 300
@@ -15,6 +20,8 @@ wait	= 300
 button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 300
 button	= TENDER_1
+
+
 
 
 
