--- a/scenarios/02. CLL/05_selectable_promotion_sell_405_earn_points.ini
+++ b/scenarios/02. CLL/05_selectable_promotion_sell_405_earn_points.ini
@@ -1,10 +1,11 @@
 [items]
+item	= 405
+wait	= 300
 item	= 736211013712
 wait	= 300
-button	= 8
 button	= .
-button	= 7
-button	= 1
+button	= 8
+button	= 2
 wait	= 300
 button	= ENTER
 wait	= 300
@@ -15,6 +16,8 @@ wait	= 300
 button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 300
 button	= TENDER_1
+
+
 
 
 
