rename dialog caption for env ini files

--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -1,6 +1,6 @@
 [CONFIG]
 
-DIALOG_CAPTION				= PosTyper [JumboTrunkDebug]
+DIALOG_CAPTION				= PosTyper | JumboTrunk Debug
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
