--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -1,6 +1,6 @@
 [CONFIG]
 
-DIALOG_CAPTION				= PosTyper [14.0.1700Debug]
+DIALOG_CAPTION				= PosTyper | 14.0.1700 Debug
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
