--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -1,6 +1,6 @@
 [CONFIG]
 
-DIALOG_CAPTION				= PosTyper [MsiRelease]
+DIALOG_CAPTION				= PosTyper | Msi Release
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
