--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -1,6 +1,6 @@
 [CONFIG]
 
-DIALOG_CAPTION				= PosTyper [23.1Debug]
+DIALOG_CAPTION				= PosTyper | 23.1 Debug
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
