add DIALOG_PROGRESS_BAR flag

--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -4,6 +4,7 @@ DIALOG_CAPTION				= PosTyper | Msi Release
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
+DIALOG_PROGRESS_BAR			= True
 DIALOG_EXT_DEVELOPER		= False
 DIALOG_LANG_SWITCHER		= False
 DIALOG_SCENARIO_SUBPATH		= .
