--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -4,6 +4,7 @@ DIALOG_CAPTION				= PosTyper | 23.1 Debug
 DIALOG_X					= -1
 DIALOG_Y					= -1
 DIALOG_STATUS_BAR			= False
+DIALOG_PROGRESS_BAR			= True
 DIALOG_EXT_DEVELOPER		= True
 DIALOG_LANG_SWITCHER		= True
 DIALOG_SCENARIO_SUBPATH		= .
