add sections to config ini file

--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -1,5 +1,5 @@
-[CONFIG]
 
+[UI]
 DIALOG_CAPTION				= PosTyper
 DIALOG_X					= -1
 DIALOG_Y					= -1
@@ -10,10 +10,12 @@ DIALOG_LANG_SWITCHER		= False
 DIALOG_SCENARIO_SUBPATH		= .
 DIALOG_AUTO_SPEED_FACTOR	= 2
 	
+[Env]
 RETAIL_DB_NAME				= Retail
 SERVER_WEBSITE				= http://localhost/StoreWebServices/
 RABBITMQ_WEBSITE			= http://localhost:15672/#/queues
 	
+[Paths]
 SERVER_PATH					= C:\Retalix\StoreServices\Server\PosService
 POS_PATH					= C:\Retalix\StoreServices\PosClient
 OFFICE_PATH					= C:\Retalix\StoreServices\OfficeClient\Web
@@ -25,6 +27,7 @@ RETAILGATEWAY_PATH			= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH			= C:\Retalix\StoreGateway
 WINEPTS_PATH				= C:\WinEpts
 	
+[Developer]
 SERVER_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Servers\Store
 SERVER_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\StoreServer
 POS_DBG_CUST_PATH			= C:\Dev\JumboTrunk\Cust\Clients\POS
@@ -32,16 +35,19 @@ POS_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH			= C:\Dev\JumboTrunk\Ext\Office
 	
+[Helpers]		
 CMD							= "C:\Windows\System32\cmd.exe"
 SQLMGR						= "C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\Ssms.exe"
 EDITOR						= "C:\Program Files (x86)\Notepad++\notepad++.exe"
 BROWSER						= "C:\Program Files\Google\Chrome\Application\chrome.exe"
 SNOOP						= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
 	
+[POS]
 USER						= 1
 PASSWORD					= 1
 LOYALTY_CARD				= 2600000078870
 	
+[Emulators]
 SCANNER_EMU_CAPTION			= Scanner\Emulator
 SCANNER_EMU_X				= 560
 SCANNER_EMU_Y				= 770
