--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -1,69 +1,69 @@
 
 [UI]
-DIALOG_CAPTION				= PosTyper | 23.1 Debug
-DIALOG_X					= -1
-DIALOG_Y					= -1
-DIALOG_STATUS_BAR			= False
-DIALOG_PROGRESS_BAR			= True
-DIALOG_EXT_DEVELOPER		= True
-DIALOG_LANG_SWITCHER		= True
-DIALOG_SCENARIO_SUBPATH		= .
-DIALOG_AUTO_SPEED_FACTOR	= 2
+CAPTION					= PosTyper | 23.1 Debug
+X						= -1
+Y						= -1
+STATUS_BAR				= False
+PROGRESS_BAR			= True
+EXT_DEVELOPER			= True
+LANG_SWITCHER			= True
+SCENARIO_SUBPATH		= .
+AUTO_SPEED_FACTOR		= 2
 	
 [Env]
-RETAIL_DB_NAME				= v23_1_Retail
-SERVER_WEBSITE				= http://localhost/v23.1_Server
-RABBITMQ_WEBSITE			= http://localhost:15672/#/queues
+RETAIL_DB_NAME			= v23_1_Retail
+SERVER_WEBSITE			= http://localhost/v23.1_Server
+RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [Paths]
-SERVER_PATH					= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
-POS_PATH					= C:\Dev\v23_1\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH					= C:\Dev\v23_1\Cust\Office\Src\Web
-TLOG_PATH					= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
-DMS_PATH					= C:\Retalix\StoreServices\Server\DMSClient
-SPOOKY_PATH					= C:\Retalix\StoreServices\Server\PosService\Utils
-ARSGATEWAY_PATH				= C:\Retalix\ArsGateway
-RETAILGATEWAY_PATH			= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
-STOREGATEWAY_PATH			= C:\Retalix\StoreGateway
-WINEPTS_PATH				= C:\WinEpts
+SERVER_PATH				= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
+POS_PATH				= C:\Dev\v23_1\Cust\Clients\POS\Output\Debug\Product
+OFFICE_PATH				= C:\Dev\v23_1\Cust\Office\Src\Web
+TLOG_PATH				= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
+DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
+SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
+ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
+RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
+STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
+WINEPTS_PATH			= C:\WinEpts
 	
 [Developer]
-SERVER_DBG_CUST_PATH		= C:\Dev\v23_1\Cust\Servers\Store
-SERVER_DBG_EXT_PATH			= C:\Dev\v23_1\Ext\StoreServer
-POS_DBG_CUST_PATH			= C:\Dev\v23_1\Cust\Clients\POS
-POS_DBG_EXT_PATH			= C:\Dev\v23_1\Ext\POSClient
-OFFICE_DBG_CUST_PATH		= C:\Dev\v23_1\Cust\Office
-OFFICE_DBG_EXT_PATH			= C:\Dev\v23_1\Ext\Office
+SERVER_DBG_CUST_PATH	= C:\Dev\v23_1\Cust\Servers\Store
+SERVER_DBG_EXT_PATH		= C:\Dev\v23_1\Ext\StoreServer
+POS_DBG_CUST_PATH		= C:\Dev\v23_1\Cust\Clients\POS
+POS_DBG_EXT_PATH		= C:\Dev\v23_1\Ext\POSClient
+OFFICE_DBG_CUST_PATH	= C:\Dev\v23_1\Cust\Office
+OFFICE_DBG_EXT_PATH		= C:\Dev\v23_1\Ext\Office
 	
 [Helpers]		
-CMD							= "C:\Windows\System32\cmd.exe"
-SQLMGR						= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
-EDITOR						= "C:\Program Files\Notepad++\notepad++.exe"
-BROWSER						= "C:\Program Files\Google\Chrome\Application\chrome.exe"
-SNOOP						= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
+CMD						= "C:\Windows\System32\cmd.exe"
+SQLMGR					= "C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE\Ssms.exe"
+EDITOR					= "C:\Program Files\Notepad++\notepad++.exe"
+BROWSER					= "C:\Program Files\Google\Chrome\Application\chrome.exe"
+SNOOP					= "C:\Temp\Snoop for Visual Studio 2013\Snoop.exe"
 	
 [POS]
-USER						= 1
-PASSWORD					= 1
-LOYALTY_CARD				= 2600000078870
+USER					= 1
+PASSWORD				= 1
+LOYALTY_CARD			= 2600000078870
 	
 [Emulators]
-SCANNER_EMU_CAPTION			= Scanner\Emulator
-SCANNER_EMU_X				= 560
-SCANNER_EMU_Y				= 770
-PRINTER_EMU_CAPTION			= POSPrinter\Emulator - Receipt
-PRINTER_EMU_X				= 0
-PRINTER_EMU_Y				= 770
-SCALE_EMU_CAPTION			= Scale\Emulator
-SCALE_EMU_X					= 965
-SCALE_EMU_Y					= 770
-DRAWER_EMU_CAPTION			= CashDrawer\Emulator
-DRAWER_EMU_X				= 1025
-DRAWER_EMU_Y				= 685
-WINEPTS_EMU_CAPTION			= EFT Simulator
-WINEPTS_EMU_X				= 1025
-WINEPTS_EMU_Y				= 0
-UPB_EMU_CAPTION				= UPB Simulator
-UPB_EMU_X					= 0
-UPB_EMU_Y					= 0
+SCANNER_CAPTION			= Scanner\Emulator
+SCANNER_X				= 560
+SCANNER_Y				= 770
+PRINTER_CAPTION			= POSPrinter\Emulator - Receipt
+PRINTER_X				= 0
+PRINTER_Y				= 770
+SCALE_CAPTION			= Scale\Emulator
+SCALE_X					= 965
+SCALE_Y					= 770
+DRAWER_CAPTION			= CashDrawer\Emulator
+DRAWER_X				= 1025
+DRAWER_Y				= 685
+WINEPTS_CAPTION			= EFT Simulator
+WINEPTS_X				= 1025
+WINEPTS_Y				= 0
+UPB_CAPTION				= UPB Simulator
+UPB_X					= 0
+UPB_Y					= 0
 
