sections rename to [R10] and [Dev]

--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -15,7 +15,7 @@ RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
-[Paths]
+[R10]
 SERVER_PATH				= C:\Retalix\StoreServices\Server\PosService
 POS_PATH				= C:\Retalix\StoreServices\PosClient
 OFFICE_PATH				= C:\Retalix\StoreServices\OfficeClient\Web
@@ -27,7 +27,7 @@ RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
 WINEPTS_PATH			= C:\WinEpts
 	
-[Developer]
+[Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Servers\Store
 SERVER_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\StoreServer
 POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
