--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -15,7 +15,7 @@ RETAIL_DB_NAME			= v14_0_17_Retail
 SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
-[Paths]
+[R10]
 SERVER_PATH				= C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
 POS_PATH				= C:\Dev\v14_0_1700\Cust\Clients\POS\Output\Debug\Product
 OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
@@ -27,7 +27,7 @@ RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
 WINEPTS_PATH			= C:\WinEpts
 	
-[Developer]
+[Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Servers\Store
 SERVER_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\StoreServer
 POS_DBG_CUST_PATH		= C:\Dev\v14_0_1700\Cust\Clients\POS
