add "break" option to automation

--- a/scenarios/sell_369_cash_manual_entry.ini
+++ b/scenarios/sell_369_cash_manual_entry.ini
@@ -1,7 +1,4 @@
 [scenario]
-button	= 3
-button	= QTY
-wait	= 300
 item	= 369
 button	= TO_TENDER
 wait	= 500
@@ -9,9 +6,14 @@ button	= ADD_CUSTOMER_BACK_BTN
 wait	= 500
 button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 500
+break	= Do you want to quit scenario?
 button	= TENDER_2
 wait	= 300
 button	= MANUAL_ENTRY
+user	= Manually enter amount
+button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+
+
 
 
 
