--- a/scenarios/sell_3x_369_cash.ini
+++ b/scenarios/sell_3x_369_cash.ini
@@ -1,15 +1,21 @@
 [scenario]
 button	= 3
 button	= QTY
-wait	= 700
+wait	= 300
 item	= 369
 button	= TO_TENDER
-wait	= 700
+wait	= 500
 button	= ADD_CUSTOMER_BACK_BTN
-wait	= 700
+wait	= 500
 button	= DIALOG_ZIP_TO_SKIP_BTN
-wait	= 700
+wait	= 500
+break	= Do you want to quit scenario?
 button	= TENDER_2
+wait	= 300
+button	= LEFT_TOP
+wait	= 500
+button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+
 
 
 
