--- a/scenarios/sell_loy_369_cash.ini
+++ b/scenarios/sell_loy_369_cash.ini
@@ -1,14 +1,18 @@
 [scenario]
 card	= 2600000078870
 button	= ENTER
-wait	= 700
+wait	= 300
 item	= 369
-wait	= 700
+wait	= 300
 button	= TO_TENDER
-wait	= 700
-button	= DIALOG_ZIP_TO_SKIP_BTN
 wait	= 1000
+break	= Do you want to quit scenario?
 button	= TENDER_2
+wait	= 300
+button	= LEFT_TOP
+wait	= 500
+button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+
 
 
 
