--- a/scenarios/sell_loy_369_eft.ini
+++ b/scenarios/sell_loy_369_eft.ini
@@ -1,14 +1,16 @@
 [scenario]
 card	= 2600000078870
 button	= ENTER
-wait	= 700
+wait	= 300
 item	= 369
-wait	= 700
+wait	= 300
 button	= TO_TENDER
-wait	= 700
-button	= DIALOG_ZIP_TO_SKIP_BTN
-wait	= 700
+wait	= 1000
+break	= Do you want to quit scenario?
 button	= TENDER_1
+user	= Scan Loyalty card again, and wait for "Spare Change" dialog
+wait	= 500
+button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
 
 
 
