add "skip" keyword

--- a/automation/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
+++ b/automation/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
@@ -12,7 +12,7 @@ button	= TO_TENDER
 wait	= 300
 card	= 2600000078870
 wait	= 300
-button	= DIALOG_ZIP_TO_SKIP_BTN
+skip	= DIALOG_ZIP
 wait	= 300
 button	= TENDER_1
 
