--- a/automation/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
+++ b/automation/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
@@ -10,9 +10,9 @@ button	= ENTER
 wait	= 300
 button	= TO_TENDER
 wait	= 300
-button	= ADD_CUSTOMER_BACK_BTN
+skip	= SCREEN_ADD_CUSTOMER
 wait	= 300
-button	= DIALOG_ZIP_TO_SKIP_BTN
+skip	= DIALOG_ZIP
 wait	= 300
 button	= TENDER_1
 
