--- a/automation/scenarios/sell_loy_369_cash.ini
+++ b/automation/scenarios/sell_loy_369_cash.ini
@@ -11,7 +11,7 @@ button	= TENDER_2
 wait	= 300
 button	= LEFT_TOP
 wait	= 500
-button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+skip	= DIALOG_SPARE_CHANGE
 
 
 
