--- a/automation/skipdialogs/dialogs.ini
+++ b/automation/skipdialogs/dialogs.ini
@@ -1,9 +1,9 @@
 [vocabulary]
-dialog	= ADD_CUSTOMER_BACK_BTN|R10PosClient|Annuleren|Back
-dialog	= DIALOG_ZIP_TO_SKIP_BTN|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.BRM.ZipCodeViewModel|Overslaan|To skip
-dialog	= DIALOG_SELECTABLE_PROMOTIONS_TO_SKIP_BTN|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.SelectablePromotionViewModel|Overslaan|To skip
-dialog	= DIALOG_SELECTABLE_PROMOTIONS_CLL_TO_SKIP_BTN|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.SelectablePromotionFromCLLViewModel|Overslaan|To skip
-dialog	= DIALOG_SPARE_CHANGE_CANCEL_BTN|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.CashPaymentChangeExtendedViewModel|Annuleren|Cancel
+dialog	= SCREEN_ADD_CUSTOMER|R10PosClient|Annuleren|Back
+dialog	= DIALOG_ZIP|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.BRM.ZipCodeViewModel|Overslaan|To skip
+dialog	= DIALOG_SELECTABLE_PROMOTIONS|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.SelectablePromotionViewModel|Overslaan|To skip
+dialog	= DIALOG_SELECTABLE_PROMOTIONS_CLL|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.SelectablePromotionFromCLLViewModel|Overslaan|To skip
+dialog	= DIALOG_SPARE_CHANGE|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.CashPaymentChangeExtendedViewModel|Annuleren|Cancel
 
 
 
