--- a/automation/scenarios/sell_3x_369_cash.ini
+++ b/automation/scenarios/sell_3x_369_cash.ini
@@ -5,16 +5,16 @@ wait	= 300
 item	= 369
 button	= TO_TENDER
 wait	= 500
-button	= ADD_CUSTOMER_BACK_BTN
+skip	= SCREEN_ADD_CUSTOMER
 wait	= 500
-button	= DIALOG_ZIP_TO_SKIP_BTN
+skip	= DIALOG_ZIP
 wait	= 500
 break	= Do you want to quit scenario?
 button	= TENDER_2
 wait	= 300
 button	= LEFT_TOP
 wait	= 500
-button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+skip	= DIALOG_SPARE_CHANGE
 
 
 
