--- a/automation/scenarios/sell_loy_369_eft.ini
+++ b/automation/scenarios/sell_loy_369_eft.ini
@@ -9,7 +9,7 @@ wait	= 1000
 break	= Do you want to quit scenario?
 button	= TENDER_1
 wait	= 1000
-button	= DIALOG_SPARE_CHANGE_CANCEL_BTN
+skip	= DIALOG_SPARE_CHANGE
 
 
 
