--- a/automation/tendering/tendering.ini
+++ b/automation/tendering/tendering.ini
@@ -1,9 +1,9 @@
 [scenario]
 button	= ENTER
 wait	= 300
-button	= ADD_CUSTOMER_BACK_BTN
+skip	= SCREEN_ADD_CUSTOMER
 wait	= 300
-button	= DIALOG_ZIP_TO_SKIP_BTN
+skip	= DIALOG_ZIP
 wait	= 300
 button	= TENDER_2
 
