add "type" keyword

--- a/automation/scenarios/02. CLL/05_selectable_promotion_sell_405_earn_points.ini
+++ b/automation/scenarios/02. CLL/05_selectable_promotion_sell_405_earn_points.ini
@@ -3,11 +3,7 @@ item	= 405
 wait	= 300
 item	= 736211013712
 wait	= 300
-button	= .
-button	= 8
-button	= 2
-wait	= 300
-button	= ENTER
+type	= .82
 wait	= 300
 button	= TO_TENDER
 wait	= 300
