--- a/automation/scenarios/01. CCV/02. ScanLoyaltyAndThenItem/02. NoLoyalty/01. NoPayment/01. Standard/scan_2621922000015_sell_8.50_item.ini
+++ b/automation/scenarios/01. CCV/02. ScanLoyaltyAndThenItem/02. NoLoyalty/01. NoPayment/01. Standard/scan_2621922000015_sell_8.50_item.ini
@@ -3,12 +3,7 @@ card	= 2621922000015
 wait	= 500
 item	= 736211013712
 wait	= 500
-button	= 8
-button	= .
-button	= 5
-button	= 0
-wait	= 300
-button	= ENTER
+type	= 8.50
 
 
 
