--- a/automation/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
+++ b/automation/scenarios/02. CLL/02_sell_736211013712_open_price_abort_by_scan_another_loy_eft.ini
@@ -2,11 +2,7 @@
 item	= 736211013712
 wait	= 300
 button	= 8
-button	= .
-button	= 7
-button	= 1
-wait	= 300
-button	= ENTER
+type	= .71
 wait	= 300
 button	= TO_TENDER
 wait	= 300
