--- a/automation/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
+++ b/automation/scenarios/02. CLL/03_sell_736211013712_open_price_abort_by_skip_loy_with_back_eft.ini
@@ -1,12 +1,7 @@
 [scenario]
 item	= 736211013712
 wait	= 300
-button	= 8
-button	= .
-button	= 7
-button	= 1
-wait	= 300
-button	= ENTER
+type	= 8.71
 wait	= 300
 button	= TO_TENDER
 wait	= 300
