--- a/automation/scenarios/02. CLL/04_price_up_sell_736211013712_101euro_get_item_369.ini
+++ b/automation/scenarios/02. CLL/04_price_up_sell_736211013712_101euro_get_item_369.ini
@@ -1,14 +1,7 @@
 [scenario]
 item	= 736211013712
 wait	= 300
-button	= 1
-button	= 0
-button	= 1
-button	= .
-button	= 0
-button	= 0
-wait	= 300
-button	= ENTER
+type	= 101.00
 wait	= 300
 button	= TO_TENDER
 wait	= 300
