--- a/automation/scenarios/02. CLL/06_stamps_sell_321_twice.ini
+++ b/automation/scenarios/02. CLL/06_stamps_sell_321_twice.ini
@@ -7,11 +7,7 @@ item	= 321
 wait	= 100
 item	= 736211013712
 wait	= 300
-button	= .
-button	= 3
-button	= 3
-wait	= 300
-button	= ENTER
+type	= .33
 wait	= 300
 button	= TO_TENDER
 wait	= 300
