On ini move postype and emulators to tuple

--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -1,8 +1,6 @@
 
 [PosTyper]
-CAPTION					= PosTyper | Msi Release
-X						= -1
-Y						= -1
+POSTYPER				= PosTyper / Msi Release|-1|-1
 STATUS_BAR				= False
 PROGRESS_BAR			= True
 EXT_DEVELOPER			= False
@@ -48,22 +46,9 @@ PASSWORD				= 1
 LOYALTY_CARD			= 2600000078870
 	
 [Emulators]
-SCANNER_CAPTION			= Scanner\Emulator
-SCANNER_X				= 560
-SCANNER_Y				= 770
-PRINTER_CAPTION			= POSPrinter\Emulator - Receipt
-PRINTER_X				= 0
-PRINTER_Y				= 770
-SCALE_CAPTION			= Scale\Emulator
-SCALE_X					= 965
-SCALE_Y					= 770
-DRAWER_CAPTION			= CashDrawer\Emulator
-DRAWER_X				= 1025
-DRAWER_Y				= 685
-WINEPTS_CAPTION			= EFT Simulator
-WINEPTS_X				= 1025
-WINEPTS_Y				= 0
-UPB_CAPTION				= UPB Simulator
-UPB_X					= 0
-UPB_Y					= 0
-
+SCANNER					= Scanner\Emulator|560|770
+PRINTER					= POSPrinter\Emulator - Receipt|0|770
+SCALE					= Scale\Emulator|965|770
+DRAWER					= CashDrawer\Emulator|1025|685
+WINEPTS					= EFT Simulator|1025|0
+UPB						= UPB Simulator|0|0
