fix Type() double click

--- a/automation/tendering/tendering.ini
+++ b/automation/tendering/tendering.ini
@@ -3,6 +3,8 @@ button	= ENTER
 wait	= 300
 skip	= SCREEN_ADD_CUSTOMER
 wait	= 300
+skip	= DIALOG_SELECTABLE_PROMOTIONS
+wait	= 300
 skip	= DIALOG_ZIP
 wait	= 300
 button	= TENDER_2
