--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -53,7 +53,7 @@ DRAWER					= CashDrawer\Emulator|1025|685
 WINEPTS					= EFT Simulator|1025|0
 UPB						= UPB Simulator|0|0
 
-[Dialogs]
+[DialogsToSkip]
 SCREEN_ADD				= SCREEN_ADD_CUSTOMER|R10PosClient|Annuleren|Back
 DIALOG_ZIP				= DIALOG_ZIP|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.BRM.ZipCodeViewModel|Overslaan|To skip
 DIALOG_SEL_PROMO		= DIALOG_SELECTABLE_PROMOTIONS|Retalix.Jumbo.Client.POS.Presentation.ViewModels.ViewModels.SelectablePromotionViewModel|Overslaan|To skip
