Add "flow" keyword

--- a/automation/scenarios/sell_369_cash_manual_entry.ini
+++ b/automation/scenarios/sell_369_cash_manual_entry.ini
@@ -1,12 +1,7 @@
 [scenario]
 item	= 369
-button	= TO_TENDER
+flow	= TENDERING
 wait	= 500
-skip	= SCREEN_ADD_CUSTOMER
-wait	= 500
-skip	= DIALOG_ZIP
-wait	= 500
-break	= Do you want to quit scenario?
 button	= TENDER_2
 wait	= 300
 button	= MANUAL_ENTRY
