--- a/automation/scenarios/sell_loy_369_cash.ini
+++ b/automation/scenarios/sell_loy_369_cash.ini
@@ -4,8 +4,7 @@ button	= ENTER
 wait	= 300
 item	= 369
 wait	= 300
-button	= TO_TENDER
-wait	= 1000
+flow	= TENDERING
 break	= Do you want to quit scenario?
 button	= TENDER_2
 wait	= 300
