--- a/automation/scenarios/sell_loy_369_eft.ini
+++ b/automation/scenarios/sell_loy_369_eft.ini
@@ -4,13 +4,9 @@ button	= ENTER
 wait	= 300
 item	= 369
 wait	= 300
-button	= TO_TENDER
-wait	= 1000
+flow	= TENDERING
 break	= Do you want to quit scenario?
-button	= TENDER_1
-wait	= 1000
-skip	= DIALOG_SPARE_CHANGE
-
+flow	= PAYING_EFT
 
 
 
