--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -1,8 +1,8 @@
 
 [PosTyper]
 POSTYPER				= PosTyper / 14.0.1700 Debug|-1|-1
-STATUS_BAR				= False
-PROGRESS_BAR			= True
+STATUS_BAR				= True
+PROGRESS_BAR			= False
 EXT_DEVELOPER			= True
 LANG_SWITCHER			= True
 SCENARIO_SUBPATH		= .
