--- a/automation/scenarios/sell_3x_369_cash.ini
+++ b/automation/scenarios/sell_3x_369_cash.ini
@@ -3,11 +3,7 @@ button	= 3
 button	= QTY
 wait	= 300
 item	= 369
-button	= TO_TENDER
-wait	= 500
-skip	= SCREEN_ADD_CUSTOMER
-wait	= 500
-skip	= DIALOG_ZIP
+flow	= TENDERING
 wait	= 500
 break	= Do you want to quit scenario?
 button	= TENDER_2
@@ -15,7 +11,6 @@ wait	= 300
 button	= LEFT_TOP
 wait	= 500
 skip	= DIALOG_SPARE_CHANGE
-
 
 
 
