--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -1,8 +1,8 @@
 
 [PosTyper]
 POSTYPER				= PosTyper / Msi Release|-1|-1
-STATUS_BAR				= False
-PROGRESS_BAR			= True
+STATUS_BAR				= True
+PROGRESS_BAR			= False
 EXT_DEVELOPER			= False
 LANG_SWITCHER			= False
 SCENARIO_SUBPATH		= .
