add tendering.ini and items.ini to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@ POStyper_tidy.txt
 collected_logs/
 captured_images/
 automation/scenarios/03. Bugs/
+automation/flows/tendering.ini
+items/items.ini
 BackUp/
