--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 /POStyper.exe
 /POStyper.ini
 /POStyper.lnk
-POStyper_tidy.txt
-collected_logs/
-captured_images/
-automation/scenarios/03. Bugs/
-automation/flows/tendering.ini
-items/items.ini
-BackUp/
+/POStyper_tidy.txt
+/collected_logs/
+/captured_images/
+/automation/scenarios/03. Bugs/
+/automation/flows/tendering.ini
+/items/items.ini
+/BackUp/
