--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /POStyper_tidy.txt
 /collected_logs/
 /captured_images/
-/automation/scenarios/03. Bugs/
-/automation/flows/tendering.ini
-/items/items.ini
-/BackUp/
+automation/scenarios/03. Bugs/
+automation/flows/tendering.ini
+items/items.ini
+BackUp/
