add tendering_git.ini to girignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 /captured_images/
 automation/scenarios/03. Bugs/
 automation/flows/tendering.ini
+automation/flows/tendering_git.ini
 items/items.ini
 BackUp/
