--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -28,6 +28,7 @@ WINEPTS_PATH			= C:\WinEpts
 [Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Servers\Store
 SERVER_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\StoreServer
+LOYALTY_DBG_EXT_PATH	= C:\Dev\v14_0_1700\Ext\Loyalty
 POS_DBG_CUST_PATH		= C:\Dev\v14_0_1700\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Office
