--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -28,6 +28,7 @@ WINEPTS_PATH			= C:\WinEpts
 [Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\v23_1\Cust\Servers\Store
 SERVER_DBG_EXT_PATH		= C:\Dev\v23_1\Ext\StoreServer
+LOYALTY_DBG_EXT_PATH	= C:\Dev\v23_1\Ext\Loyalty
 POS_DBG_CUST_PATH		= C:\Dev\v23_1\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\v23_1\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\v23_1\Cust\Office
