--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -28,6 +28,7 @@ WINEPTS_PATH			= C:\WinEpts
 [Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Servers\Store
 SERVER_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\StoreServer
+LOYALTY_DBG_EXT_PATH	= C:\Dev\JumboTrunk\Ext\Loyalty
 POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
