Added Browse Office functionality

--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -11,6 +11,7 @@ AUTO_SPEED_FACTOR		= 2
 [Env]
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
+OFFICE_WEBSITE			= http://localhost/JumboTrunk_OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
