--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -11,6 +11,7 @@ AUTO_SPEED_FACTOR		= 2
 [Env]
 RETAIL_DB_NAME			= v23_1_Retail
 SERVER_WEBSITE			= http://localhost/v23.1_Server
+OFFICE_WEBSITE			= http://localhost/v23.1_OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
