--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -11,6 +11,7 @@ AUTO_SPEED_FACTOR		= 2
 [Env]
 RETAIL_DB_NAME			= JumboTrunk_Retail
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
+OFFICE_WEBSITE			= http://localhost/OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
