--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -11,6 +11,7 @@ AUTO_SPEED_FACTOR		= 2
 [Env]	
 RETAIL_DB_NAME			= v14_0_17_Retail
 SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
+OFFICE_WEBSITE			= http://localhost/v14.0.1700_OfficeClient_
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
