Add "Fix RTIs" button

--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -34,6 +34,7 @@ POS_DBG_CUST_PATH		= C:\Dev\v14_0_1700\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\v14_0_1700\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\v14_0_1700\Ext\Office
+SERVER_DBG_RTI_PATH		= RTIs\Clean_V17
 	
 [Helpers]		
 CMD						= "C:\Windows\System32\cmd.exe"
