--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -34,6 +34,7 @@ POS_DBG_CUST_PATH		= C:\Dev\JumboTrunk\Cust\Clients\POS
 POS_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\POSClient
 OFFICE_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Office
 OFFICE_DBG_EXT_PATH		= C:\Dev\JumboTrunk\Ext\Office
+SERVER_DBG_RTI_PATH		= RTIs
 	
 [Helpers]		
 CMD						= "C:\Windows\System32\cmd.exe"
