add apppool to support using appcmd instead of iisreset

--- a/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
+++ b/envs/my_pc/JumboTrunk/Release/POStyper_Release.ini
@@ -10,6 +10,8 @@ AUTO_SPEED_FACTOR		= 2
 	
 [Env]
 RETAIL_DB_NAME			= JumboTrunk_Retail
+SERVER_APPPOOL			= Retalix10Server
+OFFICE_APPPOOL			= Retalix10StoreManager
 SERVER_WEBSITE			= http://localhost/StoreWebServices/
 OFFICE_WEBSITE			= http://localhost/OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
