--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -10,6 +10,8 @@ AUTO_SPEED_FACTOR		= 2
 	
 [Env]	
 RETAIL_DB_NAME			= v14_0_17_Retail
+SERVER_APPPOOL			= v14.0.1700_Server
+OFFICE_APPPOOL			= v14.0.1700_OfficeClient_
 SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
 OFFICE_WEBSITE			= http://localhost/v14.0.1700_OfficeClient_
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
@@ -17,7 +19,7 @@ RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 [R10]
 SERVER_PATH				= C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
 POS_PATH				= C:\Dev\v14_0_1700\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
+OFFICE_PATH				= C:\Office-Client-Release\Jumbo_14_0_1700\Web
 TLOG_PATH				= C:\Dev\v14_0_1700\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
