--- a/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/POStyper_Debug.ini
@@ -10,6 +10,8 @@ AUTO_SPEED_FACTOR		= 2
 	
 [Env]
 RETAIL_DB_NAME			= v23_1_Retail
+SERVER_APPPOOL			= v23.1_Server
+OFFICE_APPPOOL			= v23.1_OfficeClient
 SERVER_WEBSITE			= http://localhost/v23.1_Server
 OFFICE_WEBSITE			= http://localhost/v23.1_OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
@@ -17,7 +19,7 @@ RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 [R10]
 SERVER_PATH				= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
 POS_PATH				= C:\Dev\v23_1\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Dev\v23_1\Cust\Office\Src\Web
+OFFICE_PATH				= C:\Office-Client-Release\Jumbo_23_1\Web
 TLOG_PATH				= C:\Dev\v23_1\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
