--- a/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/POStyper_Debug.ini
@@ -10,6 +10,8 @@ AUTO_SPEED_FACTOR		= 2
 	
 [Env]
 RETAIL_DB_NAME			= JumboTrunk_Retail
+SERVER_APPPOOL			= JumboTrunk_Server
+OFFICE_APPPOOL			= JumboTrunk_OfficeClient
 SERVER_WEBSITE			= http://localhost/JumboTrunk_Server/
 OFFICE_WEBSITE			= http://localhost/JumboTrunk_OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
@@ -17,7 +19,7 @@ RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 [R10]
 SERVER_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService
 POS_PATH				= C:\Dev\JumboTrunk\Cust\Clients\POS\Output\Debug\Product
-OFFICE_PATH				= C:\Dev\JumboTrunk\Cust\Office\Src\Web
+OFFICE_PATH				= C:\Office-Client-Release\Jumbo_Trunk\Web
 TLOG_PATH				= C:\Dev\JumboTrunk\Cust\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
 SPOOKY_PATH				= C:\Retalix\StoreServices\Server\PosService\Utils
