fix POStyper_Debug for v14_0_1700

--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -11,9 +11,9 @@ AUTO_SPEED_FACTOR		= 2
 [Env]	
 RETAIL_DB_NAME			= v14_0_17_Retail
 SERVER_APPPOOL			= v14.0.1700_Server
-OFFICE_APPPOOL			= v14.0.1700_OfficeClient_
+OFFICE_APPPOOL			= v14.0.1700_OfficeClient
 SERVER_WEBSITE			= http://localhost/v14.0.1700_Server
-OFFICE_WEBSITE			= http://localhost/v14.0.1700_OfficeClient_
+OFFICE_WEBSITE			= http://localhost/v14.0.1700_OfficeClient
 RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
