--- a/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
+++ b/envs/my_pc/v14_0_1700/Debug/POStyper_Debug.ini
@@ -57,6 +57,7 @@ SCALE					= Scale\Emulator|965|770
 DRAWER					= CashDrawer\Emulator|1025|685
 WINEPTS					= EFT Simulator|1025|0
 UPB						= UPB Simulator|0|0
+MTX						= MTX Sim Version : 1.0.1.63|1025|0
 
 [DialogsToSkip]
 SCREEN_ADD				= SCREEN_ADD_CUSTOMER|R10PosClient|Annuleren|Back
