--- a/automation/flows/paying_cash.ini
+++ b/automation/flows/paying_cash.ini
@@ -1,5 +1,10 @@
 [scenario]
+button	= TENDER_2
+wait	= 300
 button	= LEFT_TOP
-wait	= 500
-button	= ENTER
+wait	= 1000
+skip	= DIALOG_SPARE_CHANGE
+
+
+
 
