--- a/envs/my_pc/Core/Debug/root/POStyper_Debug.ini
+++ b/envs/my_pc/Core/Debug/root/POStyper_Debug.ini
@@ -27,6 +27,7 @@ ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
 RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
 WINEPTS_PATH			= C:\WinEpts
+RTIS_FIX_PATH			= 
 	
 [Dev]
 SERVER_DBG_CUST_PATH	=
