--- a/envs/my_pc/v23_1/Debug/root/POStyper_Debug.ini
+++ b/envs/my_pc/v23_1/Debug/root/POStyper_Debug.ini
@@ -27,6 +27,7 @@ ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
 RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
 WINEPTS_PATH			= C:\WinEpts
+RTIS_FIX_PATH			= C:\Temp\PosTyperRTIsFix
 	
 [Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\v23_1\Cust\Servers\Store
