--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -27,6 +27,7 @@ ARSGATEWAY_PATH			= C:\Retalix\ArsGateway
 RETAILGATEWAY_PATH		= C:\Retalix\RetailGateway\NCR.RetailGateway.ws
 STOREGATEWAY_PATH		= C:\Retalix\StoreGateway
 WINEPTS_PATH			= C:\WinEpts
+RTIS_FIX_PATH			= C:\Temp\PosTyperRTIsFix
 	
 [Dev]
 SERVER_DBG_CUST_PATH	= C:\Dev\JumboTrunk\Cust\Servers\Store
