rename folders no spaces

--- a/envs/my_pc/JumboTrunk/Debug/root/POStyper_Debug.ini
+++ b/envs/my_pc/JumboTrunk/Debug/root/POStyper_Debug.ini
@@ -5,7 +5,7 @@ STATUS_BAR				= True
 PROGRESS_BAR			= False
 EXT_DEVELOPER			= True
 LANG_SWITCHER			= True
-SCENARIO_SUBPATH		= .
+SCENARIO_SUBPATH		= 03_Bugs
 AUTO_SPEED_FACTOR		= 2
 	
 [Env]
