--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /POStyper.lnk
 /POStyper_tidy.txt
 /automation/flows/
-/automation/scenarios/03. Bugs/
+/automation/scenarios/03_Bugs/
 /collected_logs/
 /captured_images/
 /items/
