--- a/envs/pipeline/POStyper_Pipeline.ini
+++ b/envs/pipeline/POStyper_Pipeline.ini
@@ -56,6 +56,7 @@ SCANNER					= Scanner\Emulator|560|770
 PRINTER					= POSPrinter\Emulator - Receipt|0|770
 SCALE					= Scale\Emulator|965|770
 DRAWER					= CashDrawer\Emulator|1025|685
+LINCSAFE				= [CLASS:GlassWndClass-GlassWindowClass-2]|995|470
 WINEPTS					= EFT Simulator|1025|0
 UPB						= UPB Simulator|0|0
 MTX						= MTX Sim Version : 1.0.1.63|1025|0
