--- a/envs/my_pc/v14_0_1700/Debug/root/items/items.ini
+++ b/envs/my_pc/v14_0_1700/Debug/root/items/items.ini
@@ -6,4 +6,5 @@ item=871212312312 - gift_card
 item=6299930034000081790 - gc_barcode
 item=2621922000015 - pinpad loyalty
 item=2699990000114 - loyalty
+item=ST269999000011411111111 - buying_stamps
 
