Core_Git fix POS_PATH

--- a/envs/my_pc/Core_Git/Debug/root/POStyper_Debug.ini
+++ b/envs/my_pc/Core_Git/Debug/root/POStyper_Debug.ini
@@ -18,7 +18,7 @@ RABBITMQ_WEBSITE		= http://localhost:15672/#/queues
 	
 [R10]
 SERVER_PATH				= C:\Git\emerald-global\Servers\Store\App\Src\ServiceHost\GPOSWebService
-POS_PATH				= C:\Git\emerald-global\Clients\POS\Output\Debug\POSShell
+POS_PATH				= C:\Git\emerald-global\Clients\POS\Output\Debug\Product
 OFFICE_PATH				= C:\git\emerald-global\office\Src\Web
 TLOG_PATH				= C:\Git\emerald-global\Servers\Store\App\Src\ServiceHost\GPOSWebService\Log
 DMS_PATH				= C:\Retalix\StoreServices\Server\DMSClient
