Fix Helper file for Git

--- a/envs/my_pc/Git_Jumbo_v18/Debug/root/POStyper_Debug.ini
+++ b/envs/my_pc/Git_Jumbo_v18/Debug/root/POStyper_Debug.ini
@@ -1,6 +1,6 @@
 
 [PosTyper]
-POSTYPER				= PosTyper / Git_Jumbo_v18 Debug|-1|-1
+POSTYPER				= PosTyper / Git v18 Debug|-1|-1
 STATUS_BAR				= True
 PROGRESS_BAR			= False
 EXT_DEVELOPER			= True
